<resources>
    <string name="app_name">PillBot</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_retype">Retype Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here to register</string>
    <string name="return_login">Return to Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">The email address may be invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_blank">All fields must be filled in</string>
    <string name="error_matchDB">Old password entered is incorrect</string>
    <string name="error_old_new_match">Please enter another new password</string>
    <string name="error_invalid_password">The password entered may be incorrect</string>
    <string name="error_length">Please enter a minimum password of 8 characters</string>
    <string name="error_uppercase">Please enter a password with uppercase characters</string>
    <string name="error_lowercase">Please enter a password with lowercase characters</string>
    <string name="error_digit">Please enter a password with numeric values</string>
    <string name="error_symbol">Please enter a password with symbols</string>
    <string name="error_name_blank">Name field may not be left blank</string>
    <string name="match_error">Passwords do not match</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="pill">Pill Storage</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="others">Others</string>
    <string name="nav_title">PillBot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="schedule">Schedule</string>
    <string name="timeFlex_explanation">"Time flexibility" allows the user to choose between having a
        single dispense timing shared across all pills, or separate timings for each pill.</string>
    <string name="flexEnable">"Time flexibility" is currently disabled. Enable to allow separate timings for each pill.</string>
    <string name="flexDisable">"Time flexibility" is currently enabled. Disable to share dispense timings across all pills.</string>
    <string name="flexDisable_warning">Warning: By clicking disable, all dispense times will be changed to the above time settings</string>

    // Dropdown menu for Blood Group
    <string-array name="blood_group_array">
        <item>NIL</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    // Dropdown menu for Gender
    <string-array name="gender_array">
        <item>NIL</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>