<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="@drawable/pill_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="Settings"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/setting_openPass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/menu_dropdown"
                android:gravity="left|center_vertical"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:text="Password Change"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:id="@+id/setting_passChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/setting_oldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/allergy_border"
                    android:hint="Old Password"
                    android:maxLength="15"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/setting_newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/allergy_border"
                    android:hint="New Password"
                    android:maxLength="15"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/setting_retypePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/allergy_border"
                    android:hint="Retype Password"
                    android:maxLength="15"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/setting_passError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="#FF0000" />

                <Button
                    android:id="@+id/setting_confirmPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/button_gradient"
                    android:layout_gravity="center"
                    android:text="Confirm"/>

            </LinearLayout>

            <Button
                android:id="@+id/setting_openFlexible"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/menu_dropdown"
                android:gravity="left|center_vertical"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:text="Change Time Flexibility"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:id="@+id/setting_flexChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeFlex_explanation"/>

                <LinearLayout
                    android:id="@+id/setting_flexEnableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/flexEnable"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/setting_flexEnableButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_gradient"
                            android:text="Enable"/>

                        <Button
                            android:id="@+id/setting_flexEnableReturnButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="40dp"
                            android:background="@drawable/button_gradient"
                            android:text="Return"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/setting_flexDisableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/flexDisable"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Morning:      "
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                        <EditText
                            android:id="@+id/setting_mornHour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="2"
                            android:textSize="20sp"
                            android:text="00"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text=" : "/>

                        <EditText
                            android:id="@+id/setting_mornMinute"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="2"
                            android:textSize="20sp"
                            android:text="00"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Afternoon:   "
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                        <EditText
                            android:id="@+id/setting_afternoonHour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="2"
                            android:textSize="20sp"
                            android:text="00"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text=" : "/>

                        <EditText
                            android:id="@+id/setting_afternoonMinute"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="2"
                            android:textSize="20sp"
                            android:text="00"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Evening:       "
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                        <EditText
                            android:id="@+id/setting_eveningHour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="2"
                            android:textSize="20sp"
                            android:text="00"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text=" : "/>

                        <EditText
                            android:id="@+id/setting_eveningMinute"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="2"
                            android:textSize="20sp"
                            android:text="00"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Night:            "
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                        <EditText
                            android:id="@+id/setting_nightHour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="2"
                            android:textSize="20sp"
                            android:text="00"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text=" : "/>

                        <EditText
                            android:id="@+id/setting_nightMinute"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="2"
                            android:textSize="20sp"
                            android:text="00"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:text="@string/flexDisable_warning"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/setting_flexDisableButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_gradient"
                            android:text="Disable"/>

                        <Button
                            android:id="@+id/setting_flexDisableReturnButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="40dp"
                            android:background="@drawable/button_gradient"
                            android:text="Return"/>

                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>